<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="48dp"
    android:paddingTop="32dp"
    android:paddingEnd="48dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/assistantHintImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:src="@drawable/ic_search" />

    <LinearLayout
        android:id="@+id/assistant_buttons"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/search_background"
        android:padding="0dp"
        android:clipToOutline="true"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/voice_assistant"
            android:contentDescription="@string/mic_assistant"
            android:src="@drawable/ic_mic"
            style="@style/TopBarSearchButton" />

        <ImageButton
            android:id="@+id/keyboard_assistant"
            android:contentDescription="@string/keyboard_assistant"
            android:src="@drawable/ic_keyboard"
            style="@style/TopBarSearchButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end|center_vertical">

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <TextView
            android:id="@+id/notificationCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:textColor="@color/top_bar_action_content_color"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            style="@style/TopBarImageButton"
            android:drawablePadding="5dp"
            app:drawableTint="@color/top_bar_action_content_color"
            app:drawableLeftCompat="@drawable/ic_bell" />

        <ImageButton
            android:id="@+id/settingsMaterialButton"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            style="@style/TopBarImageButton" />

    </LinearLayout>

</LinearLayout>
